--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         <!-- Footer -->
         <footer>
             <h2>❤️ Made with Love by Run Buddy.</h2>
+            <div>
+            <a href="#">Read Our Privacy Policy</a><br />
+            &copy; 2019 Run Buddy, Inc.
+            </div>
         </footer>
     </body>
 </html>
