--- a/index.html
+++ b/index.html
@@ -32,10 +32,39 @@
             </nav>
         </header>
        
-        <!-- hero/jumbotron -->
+        <!-- hero -->
         <section>
-
+                <div>
+                    <h3>Get Started Today</h3>
+                    <p>Fill out this form and one of our trainer will schedule a consult</p>
+        <!-- Add for element -->
+                <form>
+                    <label for="name">Enter full name:</label>
+                    <input type="text" placeholder="Your Name" name="name" id="name" />
+                    <label for="email">Enter email address:</label>
+                    <input type="text" placeholder="Email Address" name="email" id="email" />
+                    <label for="phone">Enter a telephone number:</label>
+                    <input type="text" placeholder="Phone Number" name="phone" id="phone" />
+                    <p>
+                        Have you worked out with a trainer before?
+                        <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                        <label for="trainer-yes">Yes</label>
+                        <input type="radio" name="trainer-confirm" id="trainer-no" />
+                        <label for="trainer-no">No</label>
+                    </p>
+                    <p>
+                        <label for="checkbox">
+                            I acknoledge that I am at least 18 years of age.
+                          </label>
+                          <input type="checkbox" name="age-confirm" id="checkbox" />       
+                    </p>
+                    <button type="submit">
+                        Get running!
+                    </button>
+                </form>
+                </div>
         </section>
+        <!-- end hero -->
         
         <!-- "what we do" section -->
         <section>
