--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </header>
        
         <!-- hero -->
-        <section>
+        <section class="hero">
                 <div>
                     <h3>Get Started Today</h3>
                     <p>Fill out this form and one of our trainer will schedule a consult</p>
@@ -42,9 +42,9 @@
                     <label for="name">Enter full name:</label>
                     <input type="text" placeholder="Your Name" name="name" id="name" />
                     <label for="email">Enter email address:</label>
-                    <input type="text" placeholder="Email Address" name="email" id="email" />
+                    <input type="email" placeholder="Email Address" name="email" id="email" />
                     <label for="phone">Enter a telephone number:</label>
-                    <input type="text" placeholder="Phone Number" name="phone" id="phone" />
+                    <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
                     <p>
                         Have you worked out with a trainer before?
                         <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -75,8 +75,11 @@
         <section>
             <h2>What You Do</h2>
         </section>
+
         <!-- "Trainers" section-->
+        <section>
             <h2>Trainers</h2>
+        </section>
 
         <!-- "Reach Out" section-->
         <section>
