--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        
         <!-- hero -->
         <section class="hero">
-                <div>
+                <div class="hero-form">
                     <h3>Get Started Today</h3>
                     <p>Fill out this form and one of our trainer will schedule a consult</p>
         <!-- Add for element -->
