--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                     <!-- List item element -->
                     <li>
                         <!-- Anchor element -->
+                        <section id="what-we-do" class="intro">
                         <a href="#what-we-do">What We Do</a>
+                        </section>
                     </li>
                     <li>
                         <a href="#what-you-do">What You Do</a>
@@ -67,7 +69,7 @@
         <!-- end hero -->
         
         <!-- "what we do" section -->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We do</h2>
             <p>
                 butcher selfies chambra shabby chic gentrify redymade yr Echo Park XOX Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
