fixed what you do section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="hero-form">
                     <h3>Get Started Today</h3>
                     <p>Fill out this form and one of our trainer will schedule a consult</p>
-        <!-- Add for element -->
+        <!-- Add form element -->
                 <form>
                     <label for="name">Enter full name:</label>
                     <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
@@ -79,7 +79,7 @@
         </section>
         
         <!-- "What You Do" section -->
-        <section id="what-you-do" class="intro">
+        <section id="what-you-do" class="steps">
             <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
