--- a/index.html
+++ b/index.html
@@ -17,14 +17,10 @@
                     <!-- List item element -->
                     <li>
                         <!-- Anchor element -->
-                        <section id="what-we-do" class="intro"></section>
-                        <a href="#what-we-do">What We Do</a>
-                        </section>
+                        <a href="#what-we-do">What We Do</a>  
                     </li>
                     <li>
-                        <section id="what-you-do" class="steps">
-                        <a href="#what-you-do">What You Do</a>
-                        </section>
+                        <a href="#what-you-do">What You Do</a>                       
                     </li>
                     <li>
                         <a href="#your-trainers">Your Trainers</a>
@@ -40,7 +36,7 @@
         <section class="hero">
                 <div class="hero-form">
                     <h3>Get Started Today</h3>
-                    <p>Fill out this form and one of our trainer will schedule a consult</p>
+                    <p>Fill out this form and one of our trainers will schedule a consult</p>
         <!-- Add form element -->
                 <form>
                     <label for="name">Enter full name:</label>
@@ -58,7 +54,7 @@
                     </p>
                     <p>
                         <label for="checkbox">
-                            I acknoledge that I am at least 18 years of age.
+                            I acknowledge that I am at least 18 years of age.
                           </label>
                           <input type="checkbox" name="age-confirm" id="checkbox" />       
                     </p>
@@ -109,14 +105,15 @@
         </section>
 
         <!-- "Trainers" section-->
-        <section>
-            <h2>Trainers</h2>
+        <section id="your-trainers">
+            <h2>Meet the Trainers</h2>
         </section>
 
         <!-- "Reach Out" section-->
         <section>
             <h2>Reach Out</h2>
         </section>
+
         <!-- Footer -->
         <footer>
             <h2>❤️ Made with Love by Run Buddy.</h2>
