--- a/index.html
+++ b/index.html
@@ -105,8 +105,36 @@
         </section>
 
         <!-- "Trainers" section-->
-        <section id="your-trainers">
-            <h2>Meet the Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet the Trainers</h2>
+        
+        <!-- first trainer bio -->
+                <article class="trainer">
+                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                    <div class="trainer-bio text-left">
+                        <h3>Arron Stephens</h3>
+                        <h4>Speed / Strength</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit a beatae tempora magnam cupiditate aperiam architecto voluptas aspernatur. Dolorum fugiat blanditiis odio, doloribus distinctio nisi possimus repellendus quisquam earum.</p>
+                    </div>
+                </article>
+        <!-- second trainer bio -->
+                <article class="trainer">
+                    <div class="trainer-bio text-right">
+                        <h3>Joanna Gill</h3>
+                        <h4>Endurance</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit a beatae tempora magnam cupiditate aperiam architecto voluptas aspernatur. Dolorum fugiat blanditiis odio, doloribus distinctio nisi possimus repellendus quisquam earum.</p>
+                    </div>
+                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill in her workout clothes, ready to pump iron" />
+                </article>
+        <!-- third trainer bio -->
+                <article class="trainer">
+                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and holding weights" />
+                    <div class="trainer-bio text-left">
+                        <h3>Harry Smith</h3>
+                        <h4>Strength</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit a beatae tempora magnam cupiditate aperiam architecto voluptas aspernatur. Dolorum fugiat blanditiis odio, doloribus distinctio nisi possimus repellendus quisquam earum.</p>
+                    </div>
+                </article>
         </section>
 
         <!-- "Reach Out" section-->
