--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <!-- navigation -->
+        <!-- start navigation -->
         <header>
             <h1>
                 <a href="/">RUN BUDDY</a>
@@ -31,6 +31,8 @@
                 </ul>
             </nav>
         </header>
+        <!-- end navigation -->
+    
        
         <!-- hero -->
         <section class="hero">
