add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
        
         <!-- hero -->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa velit consectetur, commodi eligendi, laborum nesciunt labore cupiditate nihil corporis accusamus totam vitae amet asperiores excepturi animi ut et recusandae sint.</p>
+            </div>
                 <div class="hero-form">
                     <h3>Get Started Today</h3>
                     <p>Fill out this form and one of our trainers will schedule a consult</p>
