--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                 </div>
                 </div>
             </div>
+        </section>
 
         <!-- end "What You Do" section-->
 
