--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     <li>
                         <a href="#reach-out">Reach Out</a>
                     </li>                    
+                    <li>
+                        <a href="#service-plans">Service Plans</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -182,6 +185,20 @@
                 </article>
             </div>
         </section>
+
+        <!-- start grid -->
+        <section id="service-plans" class="services">
+            <div class="service-grid-container">
+                <div class="service-grid-item">One</div>
+                <div class="service-grid-item">Two</div>
+                <div class="service-grid-item">Three</div>
+                <div class="service-grid-item">Four</div>
+                <div class="service-grid-item">Five</div>
+                <div class="service-grid-item">Six</div>
+            </div>
+        </section>
+        
+        <!-- end grid -->
 
         <!-- "Reach Out" section-->
         <section id="reach-out" class="contact">
