--- a/index.html
+++ b/index.html
@@ -55,19 +55,24 @@
                     <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
                     <label for="phone">Enter a telephone number:</label>
                     <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
-                    <p>
-                        Have you worked out with a trainer before?
+                  
+                <p>
+                    Have you worked out with a trainer before?
+                    <span class="radio-wrapper">
                         <input type="radio" name="trainer-confirm" id="trainer-yes" />
                         <label for="trainer-yes">Yes</label>
+                    </span>
+                    <span class="radio-wrapper">
                         <input type="radio" name="trainer-confirm" id="trainer-no" />
                         <label for="trainer-no">No</label>
-                    </p>
-                    <p>
-                        <label for="checkbox">
-                            I acknowledge that I am at least 18 years of age.
-                          </label>
-                          <input type="checkbox" name="age-confirm" id="checkbox" />       
-                    </p>
+                    </span>
+                </p>
+                <p>
+                    <span class="checkbox-wrapper">
+                    <input type="checkbox" name="age-confirm" id="checkbox" />
+                    <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+                    </span>
+                </p>                 
                     <button type="submit">
                         Get running!
                     </button>
