--- a/index.html
+++ b/index.html
@@ -163,30 +163,39 @@
         <!-- first trainer bio -->
             <div class="trainers">
                 <article class="trainer">
-                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                    <div class="trainer-bio">
-                        <h3 class="trainer-name">Arron Stephens</h3>
-                        <h4 class="trainer-role">Speed / Strength</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit a beatae tempora magnam cupiditate aperiam architecto voluptas aspernatur. Dolorum fugiat blanditiis odio, doloribus distinctio nisi possimus repellendus quisquam earum.</p>
+                    <div class="trainer-img trainer-1">
+                        <div>
+                            <h3 class="trainer-name">Arron Stephens</h3>
+                            <h4 class="trainer-role">Speed / Strength</h4>   
+                        </div>
+                        <div class="trainer-bio">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit a beatae tempora magnam cupiditate aperiam architecto voluptas aspernatur. Dolorum fugiat blanditiis odio, doloribus distinctio nisi possimus repellendus quisquam earum.</p>
+                        </div>
                     </div>
                 </article>
         <!-- second trainer bio -->
                 <article class="trainer">
-                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill in her workout clothes, ready to pump iron" />
-                    <div class="trainer-bio">
-                        <h3 class="trainer-name">Joanna Gill</h3>
-                        <h4 class="trainer-role">Endurance</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit a beatae tempora magnam cupiditate aperiam architecto voluptas aspernatur. Dolorum fugiat blanditiis odio, doloribus distinctio nisi possimus repellendus quisquam earum.</p>
+                    <div class="trainer-img trainer-2">
+                        <div>
+                            <h3 class="trainer-name">Joanna Gill</h3>
+                            <h4 class="trainer-role">Endurance</h4>    
+                        </div>
+                        <div class="trainer-bio">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit a beatae tempora magnam cupiditate aperiam architecto voluptas aspernatur. Dolorum fugiat blanditiis odio, doloribus distinctio nisi possimus repellendus quisquam earum.</p>
+                        </div>
                     </div>
                 </article>
         <!-- third trainer bio -->
-                            <article class="trainer">
-                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and holding weights" />
-                    <div class="trainer-bio">
-                        <h3 class="trainer-name">Harry Smith</h3>
-                        <h4 class="trainer-role">Strength</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit a beatae tempora magnam cupiditate aperiam architecto voluptas aspernatur. Dolorum fugiat blanditiis odio, doloribus distinctio nisi possimus repellendus quisquam earum.</p>
-                    </div>
+                <article class="trainer">
+                    <div class="trainer-img trainer-3">
+                        <div>
+                            <h3 class="trainer-name">Harry Smith</h3>
+                            <h4 class="trainer-role">Strength</h4>    
+                        </div>
+                        <div class="trainer-bio">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit a beatae tempora magnam cupiditate aperiam architecto voluptas aspernatur. Dolorum fugiat blanditiis odio, doloribus distinctio nisi possimus repellendus quisquam earum.</p>
+                        </div>
+                    </article>
                 </article>
             </div>
         </section>
