transitions partially completed

--- a/index.html
+++ b/index.html
@@ -165,10 +165,12 @@
                 <article class="trainer">
                     <div class="trainer-img trainer-1">
                         <div>
-                            <h3 class="trainer-name">Arron Stephens</h3>
-                            <h4 class="trainer-role">Speed / Strength</h4>   
+                            <h3>Arron Stephens</h3>
+                            <h4>Speed / Strength</h4>   
                         </div>
                         <div class="trainer-bio">
+                            <h3>Arron Stephens</h3>
+                            <h4>Speed / Strength</h4>   
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit a beatae tempora magnam cupiditate aperiam architecto voluptas aspernatur. Dolorum fugiat blanditiis odio, doloribus distinctio nisi possimus repellendus quisquam earum.</p>
                         </div>
                     </div>
